samples/_failures_safe/1761688744_17646d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75609f8c.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
